# Moirai

./: .gitignore  BENCHMARKING.md  CLASS_DIAGRAM_CRDT.md  Cargo.toml  EVENT_GRAPH.md  NOTES.md  README.md  UTILITY.md  dhat-heap.json
.devcontainer/: Dockerfile  devcontainer.json
bench-results/: BENCHMARKS.md  README.md
bench-results/aw_multidigraph/: 2025-08-04_20-44-51.json  2025-08-04_20-45-54.json  2025-08-07_18-58-56.json  2025-08-07_18-59-51.json  2025-08-07_19-01-08.json  2025-08-07_19-01-38.json  2025-08-07_19-02-39.json  2025-08-22_15-54-47.json
bench-results/aw_set/: 2025-08-22_16-05-03.json  2025-11-06-17-15-42_master_f4116336.json  2025-11-06-17-19-19_master_f4116336.json  2026-01-21-15-00-01_master_d3ddcf5d.json  2026-01-29-15-02-19_master_857b56ab.json  2026-01-29-15-43-41_master_857b56ab.json  2026-01-29-16-07-36_master_857b56ab.json
bench-results/dw_flag/: 2026-01-21-13-30-47_master_d3ddcf5d.json
bench-results/ew_flag/: 2026-01-21-13-31-43_master_d3ddcf5d.json
bench-results/list/: 2025-12-10-10-17-35_master_04359aeb.json  2025-12-10-15-38-37_master_04359aeb.json  2025-12-11-17-59-41_master_8d32c0d7.json  2025-12-11-18-03-54_master_8d32c0d7.json  2025-12-11-18-05-45_master_8d32c0d7.json  2025-12-11-18-12-57_master_8d32c0d7.json  2025-12-11-18-22-41_master_8d32c0d7.json  2025-12-11-18-23-41_master_8d32c0d7.json  2025-12-11-18-25-02_master_8d32c0d7.json  2025-12-12-12-25-20_master_8d32c0d7.json  2025-12-12-15-29-33_master_8d32c0d7.json
bench-results/stability_computation/: 16_replicas.csv  32_replicas.csv  (+3 more)
docs/: NOTES.md  benchmarking.md  comparison.md
documentation/: EVENT_GRAPH.md  NOTES.md  UTILITY.md
examples/: aw_set.rs  aw_set_add_then_remove.rs  aw_set_unstable.rs  counter.rs  mv_register.rs  resettable_counter.rs  rw_set.rs  rw_set_partition.rs  rw_set_unstable.rs  stable_graph.rs
logs/: counter_2025-07-15_18-06-54.json  ewflag_2025-07-15_18-06-55.json  lww_register_2025-07-15_18-07-14.json  multidigraph_2025-07-15_18-07-03.json  resettable_counter_2025-07-15_18-06-54.json  rw_set_2025-07-15_18-07-21.json  uw_map_2_nested_2025-07-15_18-07-10.json  wind_turbine_class_diagram_2025-07-10_16-04-58.json  wind_turbine_class_diagram_2025-07-10_16-20-08.json  wind_turbine_class_diagram_2025-07-15_18-07-26.json  wind_turbine_class_diagram_2025-07-15_18-07-41.json
moirai-crdt/: Cargo.toml  README.md
moirai-crdt/bench-results/: BENCHMARKS.md  README.md
moirai-crdt/bench-results/aw_graph/: 2026-03-04-15-40-49_21-typed-graph_dd33f9e7.json
moirai-crdt/bench-results/aw_multidigraph/: 2025-08-04_20-47-28.json
moirai-crdt/bench-results/aw_set/: 2025-11-06-17-16-57_master_f4116336.json  2026-01-21-14-00-37_master_d3ddcf5d.json  2026-01-25-20-22-16_master_cb56f58c.json  2026-01-25-21-28-00_master_cb56f58c.json  2026-04-15-15-55-06_24-event-graph_f938eff8.json
moirai-crdt/bench-results/dw_flag/: 2026-01-21-13-35-21_master_d3ddcf5d.json  2026-03-09-17-07-08_master_c994fae8.json
moirai-crdt/bench-results/ew_flag/: 2026-01-21-13-38-52_master_d3ddcf5d.json  2026-03-09-17-07-08_master_c994fae8.json
moirai-crdt/bench-results/ew_flag_set/: 2026-01-25-20-53-03_master_cb56f58c.json
moirai-crdt/bench-results/ewflag_set/: 2026-04-15-15-24-12_24-event-graph_f938eff8.json  2026-04-15-15-42-02_24-event-graph_f938eff8.json  2026-04-15-15-56-06_24-event-graph_f938eff8.json
moirai-crdt/bench-results/list/: 2025-12-12-15-28-27_master_8d32c0d7.json  2026-04-10-16-50-34_24-event-graph_f938eff8.json  2026-04-10-17-18-55_24-event-graph_f938eff8.json  2026-04-12-00-10-03_24-event-graph_f938eff8.json  2026-04-12-00-11-33_24-event-graph_f938eff8.json
moirai-crdt/bench-results/resettable_counter/: 2026-03-09-17-07-08_master_c994fae8.json
moirai-crdt/bench-results/wind_turbine_class_diagram/: 2025-08-06_15-59-59.json
moirai-crdt/src/: lib.rs
moirai-crdt/src/bag/: aw_bag.rs  mod.rs  rw_bag.rs
moirai-crdt/src/counter/: mod.rs  resettable_counter.rs  simple_counter.rs  stable.rs
moirai-crdt/src/flag/: dw_flag.rs  ew_flag.rs
moirai-crdt/src/graph/: aw_multidigraph.rs  mod.rs  typed_graph.rs  uw_multidigraph.rs
moirai-crdt/src/json/: mod.rs
moirai-crdt/src/list/: eg_walker.rs  mod.rs  nested_list.rs  unique_list.rs
moirai-crdt/src/list/eg_walker/: document.rs  item.rs  mod.rs  presence_state.rs
moirai-crdt/src/map/: mod.rs  rw_map.rs  uw_map.rs
moirai-crdt/src/model/: class_diagram.rs  mod.rs  test.rs  test_2.rs
moirai-crdt/src/option/: mod.rs
moirai-crdt/src/policy/: mod.rs
moirai-crdt/src/query/: mod.rs  read_as_json.rs
moirai-crdt/src/register/: lww_register.rs  mod.rs  mv_register.rs  mv_sliding_window.rs  po_register.rs  policy.rs  to_register.rs  unique_register.rs
moirai-crdt/src/set/: aw_set.rs  ewflag_set.rs  rw_set.rs
moirai-crdt/src/utils/: membership.rs  mod.rs
moirai-fuzz/: Cargo.toml  README.md
moirai-fuzz/src/: config.rs  display.rs  execution_graph.rs  fuzzer.rs  lib.rs  metrics.rs  op_generator.rs  runner.rs  serialize.rs  value_generator.rs
moirai-fuzz/src/utils/: boostrap.rs  format.rs  git.rs  mod.rs
moirai-macros/: Cargo.toml  README.md
moirai-macros/src/: lib.rs  record.rs  typed_graph.rs  union.rs
moirai-protocol/: Cargo.toml  README.md
moirai-protocol/src/: lib.rs  replica.rs
moirai-protocol/src/broadcast/: batch.rs  message.rs  since.rs  tcsb.rs
moirai-protocol/src/clock/: matrix_clock.rs  version_vector.rs
moirai-protocol/src/crdt/: eval.rs  mod.rs  policy.rs  pure_crdt.rs  query.rs  redundancy.rs
moirai-protocol/src/event/: id.rs  lamport.rs  mod.rs  tag.rs  tagged_op.rs
moirai-protocol/src/state/: cache.rs  effect_context.rs  event_graph.rs  graph_log.rs  log.rs  mod.rs  object_path.rs  po_log.rs  sink.rs  stable_state.rs  unstable_state.rs
moirai-protocol/src/state/unstable_state/: event_graph.rs  hashmap.rs  mod.rs  vec.rs
moirai-protocol/src/utils/: intern_str.rs  mod.rs  translate_ids.rs
proc/: Cargo.toml
src/: lib.rs  macros.rs  trcb.rs
tests/: benchmark.rs  causal_delivery.rs  converging.rs  evict.rs  join.rs  leave.rs  membership.rs  pulling.rs  stability.rs  temp.rs
(+210 files in other folders)
