[package]
name = "moirai"
version = "0.1.0"
edition = "2021"
authors = [
    "Léo Olivier <leo.olivier@cea.fr>",
    "MORCOS Kirollos <Kirollos.MORCOS@cea.fr>",
]
description = "Moirai: An Extensible, Generic Operation-based CRDT Framework with Customizable Conflict Resolution"
license = "Apache-2.0"
repository = "https://github.com/CEA-LIST/Moirai.git"

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
log = "0.4"
env_logger = "0.11.2"
test-log = "0.2.15"
colored = "2.1.0"
paste = "1.0.15"
petgraph = { version = "0.6.4", features = ["serde-1"] }
rand = { version = "0.9.1", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.128", optional = true }
anyhow = { version = "1.0.89", optional = true }
tsify = { version = "0.5.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
deepsize = { version = "0.2.0", optional = true }
vf2 = { version = "1.0.1", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
chrono = { version = "0.4.41", optional = true }
indicatif = { version = "0.18.0", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
elsa = "1.11.2"
rustc-hash = "2.1.1"
uuid = "1.18.1"
tinystr = "0.8.1"
smallvec = "1.15.1"

[features]
default = ["crdt", "utils", "fuzz"]
utils = ["dep:anyhow", "dep:deepsize"]
fuzz = [
    "dep:chrono",
    "dep:rand",
    "dep:serde",
    "dep:rand_chacha",
    "dep:serde_json",
    "dep:indicatif",
]
crdt = ["dep:vf2"]
serde = ["dep:serde_json", "dep:serde", "dep:tsify", "dep:wasm-bindgen"]

[profile.release]
debug = 1
