[workspace]
resolver = "3"
members = ["moirai-protocol", "moirai-crdt", "moirai-fuzz", "moirai-macros"]

[workspace.package]
license = "Apache-2.0"
authors = ["Léo Olivier <leo.olivier@cea.fr>"]
repository = "https://github.com/CEA-LIST/Moirai.git"
homepage = "https://github.com/CEA-LIST/Moirai"
description = "Moirai: A Rust Implementation of the Pure Operation-Based CRDT Framework, made for Building Collaborative Applications"
readme = "README.md"
keywords = [
    "crdt",
    "conflict-free replicated data type",
    "collaborative applications",
    "distributed systems",
    "rust",
]
categories = []
