[package]
name = "moirai-fuzz"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fuzzer for the Moirai CRDT framework"
readme = "README.md"

[dependencies]
moirai-protocol = { path = "../moirai-protocol", features = ["test_utils"] }
chrono = { version = "0.4.41" }
rand = { version = "0.10.0" }
log = "0.4"
comfy-table = { version = "7.2.0" }
indicatif = { version = "0.18.0" }
readable = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.128" }
env_logger = "0.11.8"
rand_chacha = { version = "0.10.0" }
rustc-hash = "2.1.1"
daggy = "0.9.0"
bimap = "0.6.3"
petgraph = "0.8.3"
