[package]
name = "moirai-macros"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Macros for the Moirai CRDT framework implementation"

[dependencies]
moirai-protocol = { path = "../moirai-protocol" }
moirai-fuzz = { path = "../moirai-fuzz", optional = true }
paste = "1.0.15"
rustc-hash = "1.1.0"
deepsize = { git = "https://github.com/leo-olivier/deepsize.git", optional = true, features = [
    "elsa",
] }

# TEST UTILS FEATURES
[features]
default = []
fuzz = ["moirai-fuzz"]
sink = ["moirai-protocol/sink"]
test_utils = ["moirai-protocol/test_utils", "dep:deepsize"]
