[package]
name = "moirai-protocol"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Pure Operation-based CRDT framework implementation"

[dependencies]
elsa = { git = "https://github.com/leo-olivier/elsa.git" }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
bimap = { version = "0.6.3", features = ["serde"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
# SERDE FEATURES
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.128", optional = true }
tsify = { version = "0.5.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
# TEST UTILS FEATURES
deepsize = { git = "https://github.com/leo-olivier/deepsize.git", optional = true, features = [
    "elsa",
] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:tsify", "dep:wasm-bindgen"]
sink = []
test_utils = ["dep:deepsize"]
